# DocumentSearchAssistant

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
attached_assets/: Pasted-ValueError-A-string-literal-cannot-contain-NUL-0x00-characters-Traceback-File-home-runner-w-1739127686782.txt  Pasted-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-been-closed-unexpect-1739128026214.txt
utils/: database.py  document_handler.py  export_handler.py  pdf_handler.py  summarizer.py  text_processor.py
